--- a/app/app_core/templates/rahul.html
+++ b/app/app_core/templates/rahul.html
@@ -13,39 +13,9 @@
 </head>
 <body>
 <header>
-
-    <div id="langbar" align="right">
-        <select>
-            <option>Language</option>
-            <option value="English">English</option>
-            <option value="French">French</option>
-        </select>
-    </div>
-
-
-
-    <div id="menu" class="clear">
-
-
-
-        <a href="/"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
-        <ul align="center" id="bar">
-            <li><a href="/aboutus">About Us</a></li>
-            <li><a href="/gallery">Gallery</a></li>
-            <li><a href="/forum">Forum</a></li>
-            <li><a href="/events">Events</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Registration</a></li>
-        </ul>
-
-    </div>
-
-
-    
+<title>KSC</title>
+    {% include 'header.html' %}
 </header>
-
-
-    </div>
 
       
     </div>
@@ -53,10 +23,11 @@
     <div id="leader">
         
 
-   
+   <div style="text-align: center">
     <img typeof="foaf:Image" alt="" src="/static/image/spn2.png" width="180" height="180" />
+    </div>
     <div align="center">
-<h2> <font size="10"> Rahul <font face="verdana" color="green">De</font></font></h2>
+<h2> <font size="10"> Rahul <font face="verdana" color="Green">De</font></font></h2>
 
 
 <div class="container">
@@ -67,15 +38,6 @@
 
  </div>    
 
-
-
-
-        
-          
-  
-  
-  
-  
 </div> 
 
 </ul>
@@ -83,46 +45,9 @@
 
  </div>
 </div>
+    <p>&nbsp;</p>
+        <p>&nbsp;</p>
+    {% include 'footer.html' %}
       </body>
-      <footer align="center">
-    <div id="wrap">
-    <div id="right">
-    <ul>
-        <ls>
-            <div align="right">
-                <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
-                    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
-                </a>
-                <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
-                <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
-                    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
-                </a>
-    </div>
-    <div id="main" align="left">
-    <ls>
-                    <a id="contactus" href="/contactus">
-                        <font size="3"><b> Contact Us </b></font>
-                    </a>
-                   
-                </ls>&nbsp;
-                <ls>
-                    <a id="partners" href="/partners">
-                        <font size="3"><b>| Our Partners  </b></font>
-                    </a>
-                    
-                </ls>&nbsp;
-                <ls>
-                    <a id="termscons" href="/termscons">
-                        <font size="3"><b>| Terms&Conditions </font></a>
-                    
-              </ls>&nbsp;
-                <ls>
-                    <a id="privacy" href="/privacy">
-                        <font size="3"><b>| Privacy Policy </font></a>
-                </ls>&nbsp;
-                    &nbsp;
-    <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
-            </div>
-            </div>
-    </footer>
+
 </html>
