--- a/app/app_core/templates/register.html
+++ b/app/app_core/templates/register.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Register</title>
+    {% include 'header.html' %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link type="text/css" rel="stylesheet" href="/static/css/home_style.css">
@@ -12,28 +13,12 @@
     <link href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <style type="text/css">
+p{
+    font-size: 10px;
+}
+    </style>
 </head>
-<header>
-    <div align="right">
-        <select id="langbar">
-            <option>Language</option>
-            <option value="English">English</option>
-            <option value="French">French</option>
-        </select>
-    </div>
-    <div id="menu" class="clear">
-        <a href="/">
-            <div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div>
-        </a>
-        <ul align="center" id="bar">
-            <li><a href="/aboutus">About Us</a></li>
-            <li><a href="/gallery">Gallery</a></li>
-            <li><a href="/forum">Forum</a></li>
-            <li><a href="/events">Events</a></li>
-            <li><a href="/login">Login</a></li>
-        </ul>
-    </div>
-</header>
 </div>
 <body onload="document.register.firstname.focus()">
 <form name="register" id="register" method="post" onsubmit="return validateForm()">
@@ -42,32 +27,33 @@
     <h1>Create a KSC account</h1>
 
     <div>
-        <label>First Name </label>
+        <label>First Name *</label>
         <input type="text" name="firstname" id="firstname" placeholder="Enter your first name" maxLength="140" required>
     </div>
     <div>
-        <label>Last Name </label>
+        <label>Last Name *</label>
         <input type="text" name="lastname" id="lastname" placeholder="Enter your last name" maxLength="140" required>
     </div>
     <div>
-        <label>Email ID </label>
+        <label>Email ID *</label>
         <input type="email" name="email" id="email" placeholder="Enter your Email ID" required>
     </div>
     <div>
-        <label>Username </label>
+        <label>Username *</label>
         <input type="text" name="username" id="username" placeholder="Choose your Username" required>
     </div>
     <div>
-        <label>Password </label>
+        <label>Password *</label>
         <input type="password" name="password" id="password" placeholder="Enter your Password" required>
     </div>
+    <p>password should have uppercases and lowercases</p>
     <div>
-        <label>Confirm Password </label>
+        <label>Confirm Password *</label>
         <input type="password" name="confirmpassword" id="confirmpassword" placeholder="Type your password again."
                required>
     </div>
     <div>
-        <label>Contact Number </label>
+        <label>Contact Number *</label>
         <input type="text" name="contact" id="contact" placeholder="Enter your Contact Number" maxLength="10" required>
     </div>
     <div>
@@ -85,12 +71,12 @@
     </div>
 
     <div>
-        <label>Current Address </label>
+        <label>Current Address *</label>
         <textarea type="text" name="currentaddress" id="currentaddress" placeholder="Current Address"
                   required></textarea>
     </div>
     <div>
-        <label>Permanent Address </label>
+        <label>Permanent Address *</label>
         <textarea type="text" name="permanentaddress" id="permanentaddress" placeholder="Permanent Address"
                   required></textarea>
     </div>
@@ -100,15 +86,15 @@
         </select>
     </div>
     <div>
-        <label>City </label>
+        <label>City *</label>
         <input type="text" name="city" id="city" placeholder="Enter your city" required>
     </div>
     <div>
-        <label>University </label>
+        <label>University *</label>
         <input type="text" name="university" id="university" placeholder="Enter your University" required>
     </div>
     <div>
-        <label>Course </label>
+        <label>Course *</label>
         <input type="text" name="course" id="course" placeholder="Enter your Course" maxLength="140" required>
     </div>
     <div class="question">
@@ -136,59 +122,12 @@
         <div>
             <p>I have read and agree to the <a target="_blank" href="/termscons" rel="nofollow">Terms and conditions</a></p>
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" class="registrationsuccessful">Submit</button>
     </form>
     </fieldset>
 </body>
     </div>
-<footer align="center">
-    <div id="wrap">
-        <div id="right">
-            <ul>
-                <ls>
-                    <div align="right">
-                        <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf"
-                           target="_blank">
-                            <img alt="Go to KSC facebook page" align="right" border="0" height="40"
-                                 src="/static/images/facebook1.png" width="40">
-                        </a>
-                        <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier"
-                           target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40"
-                                                src="/static/images/google1.png" width="40"></a>
-                        <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
-                            <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png"
-                                 width="40">
-                        </a>
-                    </div>
-                    <div id="main" align="left">
-                        <ls>
-                            <a id="contactus" href="/contactus">
-                                <font size="3"><b> Contact Us </b></font>
-                            </a>
-                        </ls>
-                        &nbsp;
-                        <ls>
-                            <a id="partners" href="/partners">
-                                <font size="3"><b>| Our Partners </b></font>
-                            </a>
-                        </ls>
-                        &nbsp;
-                        <ls>
-                            <a id="termscons" href="/termscons">
-                                <font size="3"><b>| Terms&Conditions </font></a>
 
-                        </ls>
-                        &nbsp;
-                        <ls>
-                            <a id="privacy" href="/privacy">
-                                <font size="3"><b>| Privacy Policy </font></a>
-                        </ls>
-                        &nbsp;
-                        &nbsp;
-                        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
-                    </div>
-        </div>
-</footer>
 <script type="text/javascript" src="/static/js/register.js"></script>
 <script>
     $(function () {
@@ -206,4 +145,6 @@
     });
 </script>
 </body>
+<p>&nbsp;</p>
+    {% include 'footer.html' %}
 </html>
